# cash_book

./: .env  .gitignore  Cargo.toml  README.md  justfile
migrations/: 20240824002800_create_entry_table.sql
src/: main.rs
src/repository/: entry.rs  error.rs  mod.rs
src/routes/: entry.rs  error.rs  mod.rs
src/service/: create_entry.rs  error.rs  mod.rs
