[package]
name = "caderninho"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features=["macros"] }
bigdecimal = { version = "0.4.5", features = ["serde-json"] }
dotenvy = "0.15.7"
serde = "1.0.208"
serde_json = "1.0.127"
serde_with = { version = "3.9.0", features = ["time_0_3"] }
sqlx = { version = "0.8.0", features=["runtime-tokio-rustls", "postgres", "time", "uuid", "bigdecimal", "chrono"] }
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
